SonarQube issues fixed